--- a/main.css
+++ b/main.css
@@ -443,6 +443,9 @@ li {
 li a {
   color: black;
   transition: all 0.4s;
+  width: 100px;
+  height: 30px;
+  border-radius: 5px;
 }
 
 .container-boxes-portfolio {
